main section update

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <section class="container auto mx-auto py-24">  
 <div class="contain grid grid-cols-2">
     <div class="title content-center">
-      <div class="div border-l-4 border-red-600 pl-2">
+      <div class="div border-l-4 border-red-600 pl-3 border-rounded">
       <h1 class=" text text-6xl text-bold">Stay Focused on</h1>
       <span class="text text-6xl text bold text-orange-300"  >Mission 2025</span>
     </div>
@@ -33,5 +33,41 @@
    
   </section>
  </header>
+<!-- header section end -->
+<main>
+  <section class="container mx-auto">
+    <div class="headline text-center text-6xl">
+      <h1 class=" text text-bold">My Mission <span class="text-orange-400">2025</span></h1>
+    </div>
+    <div class="catagories grid grid-cols-3 gap-8">
+      <div class="items bg-slate-200 rounded-3xl">
+        <img class="size-52" src="../images/illustrators/illustrator-1.png" alt="">
+        <H2 class="text-3xl">Mission</H2>
+        <p class="text-2xl">Amet minim mollit non deserunt 
+          ullamco est sit aliqua dolor do amet 
+          sint. Velit officia consequat duis enim 
+          velit mollit
+
+        </p>
+      </div>
+      <div class="items bg-red-50 rounded-3xl">
+        <img class="size-52" src="../images/illustrators/illustrator-2.png" alt="">
+        <h2 class="text-3xl">Vision</h2>
+        <p class="text-2xl">Amet minim mollit non deserunt 
+          ullamco est sit aliqua dolor do amet 
+          sint. Velit officia consequat duis enim 
+          velit mollit</p>
+      </div>
+      <div class="items bg-orange-100 rounded-3xl">
+        <img class="size-52" src="../images/illustrators/illustrator-3.png" alt="">
+        <h2 class="text-3xl">Goles</h2>
+        <p class="text-2xl">Amet minim mollit non deserunt 
+          ullamco est sit aliqua dolor do amet 
+          sint. Velit officia consequat duis enim 
+          velit mollit</p>
+      </div>
+    </div>
+  </section>
+</main>
 </body>
 </html>
