--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         referrentur, at eam falli deterruisset. No duo populo 
         animal noluisse, eni</p>
         <button>
-          <a  href="#" class="bg-red-500 p-4 rounded-lg text-white">Explore Now</a>
+          <a  href="#" class="bg-red-500 p-4 rounded-lg text-white text-2xl">Explore Now</a>
         </button>
         <p class="text-2xl text-yellow-600 mt-4">Scroll down to explore more about us</p>
 
@@ -35,15 +35,15 @@
  </header>
 <!-- header section end -->
 <main>
-  <section class="container mx-auto">
-    <div class="headline text-center text-6xl">
+  <section class="container mx-auto mb-20">
+    <div class="headline text-center text-6xl my-24">
       <h1 class=" text text-bold">My Mission <span class="text-orange-400">2025</span></h1>
     </div>
     <div class="catagories grid grid-cols-3 gap-8">
       <div class="items bg-slate-200 rounded-3xl">
         <img class="size-52" src="../images/illustrators/illustrator-1.png" alt="">
-        <H2 class="text-3xl">Mission</H2>
-        <p class="text-2xl">Amet minim mollit non deserunt 
+        <H2 class="text-3xl pl-10">Mission</H2>
+        <p class="text-2xl p-10">Amet minim mollit non deserunt 
           ullamco est sit aliqua dolor do amet 
           sint. Velit officia consequat duis enim 
           velit mollit
@@ -52,22 +52,109 @@
       </div>
       <div class="items bg-red-50 rounded-3xl">
         <img class="size-52" src="../images/illustrators/illustrator-2.png" alt="">
-        <h2 class="text-3xl">Vision</h2>
-        <p class="text-2xl">Amet minim mollit non deserunt 
+        <h2 class="text-3xl pl-10">Vision</h2>
+        <p class="text-2xl p-10">Amet minim mollit non deserunt 
           ullamco est sit aliqua dolor do amet 
           sint. Velit officia consequat duis enim 
           velit mollit</p>
       </div>
       <div class="items bg-orange-100 rounded-3xl">
         <img class="size-52" src="../images/illustrators/illustrator-3.png" alt="">
-        <h2 class="text-3xl">Goles</h2>
-        <p class="text-2xl">Amet minim mollit non deserunt 
+        <h2 class="text-3xl pl-10">Goles</h2>
+        <p class="text-2xl p-10">Amet minim mollit non deserunt 
           ullamco est sit aliqua dolor do amet 
           sint. Velit officia consequat duis enim 
           velit mollit</p>
+
       </div>
     </div>
   </section>
+  <!-- main section-1 end -->
+   <!-- main section -2 start -->
+<section class="container mx-auto mb-20">
+<div class="coding-area flex">
+  <div class="picture-area content-center">
+    <img class="size-5/6" src="../images/pictures/coding.png" alt="">
+  </div>
+  <div class="text-area content-center">
+    <h2 class="text text-4xl text-black" >Develop <br>
+    Without Limits</h2>
+    <p class="text-2xl py-6">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+      deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
+      mundi noster pri, ea eos quas expetendis scripserit, affert gubergren 
+      dissentias et cum</p>
+      <div class="div pt-5">
+      <button> 
+        <a href="#" class="bg-red-500 p-4 rounded-lg text-white text-2xl">Read the Documentation</a>
+      </button>
+    </div>
+
+  </div>
+</div>
+</section>
+<section class="container mx-auto mb-30">
+<div class="coding-area flex flex-row-reverse gap-x-10">
+  <div class="picture-area content-center">
+    <img class="size-10/12 ml-6" src="../images/pictures/project.png" alt="">
+  </div>
+  <div class="text-area content-center">
+    <h2 class="text text-4xl text-black" >Know Our <br>
+     Global Community</h2>
+    <p class="text-2xl py-6 mr-10">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+      deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
+      mundi noster pri, ea eos quas expetendis scripserit, affert gubergren 
+      dissentias et cum</p>
+      <div class="div pt-5">
+      <button> 
+        <a href="#" class="bg-red-500 p-4 rounded-lg text-white text-2xl">Read the Documentation</a>
+      </button>
+    </div>
+
+  </div>
+</div>
+</section>
+<!-- main section -2 end -->
+ <!-- main section -3 start -->
+  <section>
+
+
+    <section class="container mx-auto">
+
+      <p class="text text-center text-6xl mt-10">Build <span class="text-orange-300">Corona Applicatio</span></p>
+
+      <div class="coding-area grid grid-cols-2 justify-items-center">
+        <div class="picture-area content-center">
+          <img class="size-4/5" src="../images/pictures/app.png" alt="">
+        </div>
+        <div class="text-area content-center">
+          <h2 class="text text-6xl text-black" >Stay safe with</h2> 
+           <h1 class="text text-6xl">go <span class="text text-6xl text-orange-300">Corona.</h1></span>
+          <p class="text-2xl py-6 pr-10">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+            deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
+            mundi noster pri, ea eos quas expetendis scripserit, affert gubergren 
+            dissentias et cum</p>
+            <div class="div pt-5">
+            <button> 
+              <a href="#" class="bg-red-500 p-4 rounded-lg text-white text-2xl">Add Fetures</a>
+            </button>
+          </div>
+      
+        </div>
+      </div>
+      </section>
+
+  </section>
+
 </main>
+<!-- main section end -->
+ <footer>
+  <section class="bg-slate-900 py-12">
+    <div class="items text-center text-white">
+    <h1 class="text text-5xl py-8 italic hover:not-italic" >Mission <span class="text-red-400" >2025</h1></span>
+    <p class="text text-xl">Hard work, Perseverance, and Determination for 2025</p>
+  </div>
+  </section>
+ </footer>
+
 </body>
 </html>
