--- a/src/index.html
+++ b/src/index.html
@@ -9,24 +9,26 @@
 </head>
 <body>
  <header>
-  <section class="container auto mx-auto py-24">  
+  <section class="container auto mx-auto py-14">  
 <div class="contain grid grid-cols-2">
     <div class="title content-center">
       <div class="div border-l-4 border-red-600 pl-3 border-rounded">
-      <h1 class=" text text-6xl text-bold">Stay Focused on</h1>
-      <span class="text text-6xl text bold text-orange-300"  >Mission 2025</span>
+      <h1 class=" text text-6xl text-bold font-bold mb-5">Stay Focused on</h1>
+      <span class="text text-6xl text bold text-orange-300 font-bold">Mission 2025</span>
     </div>
-      <p class="text-2xl mb-4">Lorem ipsum dolor sit amet, usu cu esse possit 
+      <p class="text-2xl mb-4 mt-5">Lorem ipsum dolor sit amet, usu cu esse possit 
         referrentur, at eam falli deterruisset. No duo populo 
         animal noluisse, eni</p>
+        <div class="div py-5">
         <button>
           <a  href="#" class="bg-red-500 p-4 rounded-lg text-white text-2xl">Explore Now</a>
         </button>
+      </div>
         <p class="text-2xl text-yellow-600 mt-4">Scroll down to explore more about us</p>
 
     </div>
     <div class="image justify-items-center">
-      <img class="size-96 " src="../images/person/person-2.png" alt="">
+      <img class="size-5/6" src="../images/person/person-2.png" alt="">
     </div>
   </div>
 
@@ -36,8 +38,8 @@
 <!-- header section end -->
 <main>
   <section class="container mx-auto mb-20">
-    <div class="headline text-center text-6xl my-24">
-      <h1 class=" text text-bold">My Mission <span class="text-orange-400">2025</span></h1>
+    <div class="headline text-center text-6xl mb-24">
+      <h1 class=" text text-bold font-bold">My Mission in <span class="text-orange-400 font-bold">2025</span></h1>
     </div>
     <div class="catagories grid grid-cols-3 gap-8">
       <div class="items bg-slate-200 rounded-3xl">
@@ -77,7 +79,7 @@
     <img class="size-5/6" src="../images/pictures/coding.png" alt="">
   </div>
   <div class="text-area content-center">
-    <h2 class="text text-4xl text-black" >Develop <br>
+    <h2 class="text text-4xl text-black font-bold" >Develop <br>
     Without Limits</h2>
     <p class="text-2xl py-6">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
       deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
@@ -93,12 +95,12 @@
 </div>
 </section>
 <section class="container mx-auto mb-30">
-<div class="coding-area flex flex-row-reverse gap-x-10">
+<div class="coding-area flex flex-row-reverse gap-x-10 space-x-2">
   <div class="picture-area content-center">
     <img class="size-10/12 ml-6" src="../images/pictures/project.png" alt="">
   </div>
   <div class="text-area content-center">
-    <h2 class="text text-4xl text-black" >Know Our <br>
+    <h2 class="text text-4xl text-black font-bold" >Know Our <br>
      Global Community</h2>
     <p class="text-2xl py-6 mr-10">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
       deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
@@ -120,15 +122,15 @@
 
     <section class="container mx-auto">
 
-      <p class="text text-center text-6xl mt-10">Build <span class="text-orange-300">Corona Applicatio</span></p>
+      <p class="text text-center text-6xl mt-10 font-bold ">Build <span class="text-orange-300 font-bold">Corona Applicatio</span></p>
 
       <div class="coding-area grid grid-cols-2 justify-items-center">
         <div class="picture-area content-center">
           <img class="size-4/5" src="../images/pictures/app.png" alt="">
         </div>
         <div class="text-area content-center">
-          <h2 class="text text-6xl text-black" >Stay safe with</h2> 
-           <h1 class="text text-6xl">go <span class="text text-6xl text-orange-300">Corona.</h1></span>
+          <h2 class="text text-6xl text-black font-bold" >Stay safe with</h2> 
+           <h1 class="text text-6xl font-bold">Go <span class="text text-6xl text-orange-300 font-bold">Corona.</h1></span>
           <p class="text-2xl py-6 pr-10">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
             deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
             mundi noster pri, ea eos quas expetendis scripserit, affert gubergren 
@@ -150,7 +152,7 @@
  <footer>
   <section class="bg-slate-900 py-12">
     <div class="items text-center text-white">
-    <h1 class="text text-5xl py-8 italic hover:not-italic" >Mission <span class="text-red-400" >2025</h1></span>
+    <h1 class="text text-5xl py-8 italic hover:not-italic font-bold" >Mission <span class="text-red-400 font-bold" >2025</h1></span>
     <p class="text text-xl">Hard work, Perseverance, and Determination for 2025</p>
   </div>
   </section>
