--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
  <header>
   <section class="container auto mx-auto py-14">  
-<div class="contain grid grid-cols-2">
+<div class="contain grid grid-cols-2 sm:grid-cols-1 md:grid-cols-2">
     <div class="title content-center">
       <div class="div border-l-4 border-red-600 pl-3 border-rounded">
       <h1 class=" text text-6xl text-bold font-bold mb-5">Stay Focused on</h1>
@@ -28,7 +28,7 @@
 
     </div>
     <div class="image justify-items-center">
-      <img class="size-5/6" src="../images/person/person-2.png" alt="">
+      <img class="size-11/12" src="../images/person/person-2.png" alt="">
     </div>
   </div>
 
@@ -41,8 +41,8 @@
     <div class="headline text-center text-6xl mb-24">
       <h1 class=" text text-bold font-bold">My Mission in <span class="text-orange-400 font-bold">2025</span></h1>
     </div>
-    <div class="catagories grid grid-cols-3 gap-8">
-      <div class="items bg-slate-200 rounded-3xl">
+    <div class="catagories grid grid-cols-3 gap-8 sm:grid-cols-1 md:grid-cols-3">
+      <div class="items bg-slate-200 rounded-3xl pb-8">
         <img class="size-52" src="../images/illustrators/illustrator-1.png" alt="">
         <H2 class="text-3xl pl-10">Mission</H2>
         <p class="text-2xl p-10">Amet minim mollit non deserunt 
@@ -52,7 +52,7 @@
 
         </p>
       </div>
-      <div class="items bg-red-50 rounded-3xl">
+      <div class="items bg-red-50 rounded-3xl pb-8">
         <img class="size-52" src="../images/illustrators/illustrator-2.png" alt="">
         <h2 class="text-3xl pl-10">Vision</h2>
         <p class="text-2xl p-10">Amet minim mollit non deserunt 
@@ -60,7 +60,7 @@
           sint. Velit officia consequat duis enim 
           velit mollit</p>
       </div>
-      <div class="items bg-orange-100 rounded-3xl">
+      <div class="items bg-orange-100 rounded-3xl pb-8">
         <img class="size-52" src="../images/illustrators/illustrator-3.png" alt="">
         <h2 class="text-3xl pl-10">Goles</h2>
         <p class="text-2xl p-10">Amet minim mollit non deserunt 
@@ -124,7 +124,7 @@
 
       <p class="text text-center text-6xl mt-10 font-bold ">Build <span class="text-orange-300 font-bold">Corona Applicatio</span></p>
 
-      <div class="coding-area grid grid-cols-2 justify-items-center">
+      <div class="coding-area grid grid-cols-2 justify-items-center sm:grid-cols-1 md:grid-cols-2">
         <div class="picture-area content-center">
           <img class="size-4/5" src="../images/pictures/app.png" alt="">
         </div>
